--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,13 +4,13 @@
 <div class="container mt-3">
   <div class="row">
     <div class="col">
-      <button class="btn btn-warning" (click)="countBrands()">CountBrands</button>
+      <button class="btn btn-danger" (click)="countCategory()">Count Category</button>
     </div>
     <div class="col">
-      <button class="btn btn-warning" (click)="avgRatings()">AvgRatings</button>
+      <button class="btn btn-danger" (click)="maxDiscount()">Max Discount</button>
     </div>
     <div class="col">
-      <button class="btn btn-warning" (click)="stockLevel()">StockLevel</button>
+      <button class="btn btn-danger" (click)="priceLevel()">priceLevel</button>
     </div>
   </div>
 </div>
